make-user-controlling-function

--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -6,7 +6,7 @@
       .main_chat__header__left_content__member_list
         Member:masa
     .main_chat__header__edit_btn
-      = link_to "#", class: "contents__btn" do
+      = link_to edit_group_path do
         Edit
   .main_chat__middle
     .main_chat__middle__message_box
