--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -53,6 +53,9 @@
       position: absolute;
       top: 20px;
       left: 20px;
+      a{
+        color: white
+      }
 
     }
     &__group_message{
@@ -60,7 +63,6 @@
       position: absolute;
       top: 40px;
       left: 20px;
-
     }
   }
 }
