--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -4,7 +4,9 @@
       .main_chat__header__left_content__group_name
         = @group.name
       .main_chat__header__left_content__member_list
-        = @group.users
+        member:
+        - @group.users.each do |user|
+          = user.name
     .main_chat__header__edit_btn
       = link_to edit_group_path(@group) do
         Edit
