implementation-of-auto-update-function

--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,4 +1,4 @@
-.message
+.message{data: {message: {id: message.id}}}
   .main_chat__middle__message_box__upper_info
     .main_chat__middle__message_box__upper_info__member_name
       = message.user.name
