--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -131,7 +131,7 @@
           font-size: 16px;
           color: #333333;
         }
-      r  &__update_time{
+        &__update_time{
           font-size: 12px;
           color:#999999;
           margin-left: 10px;
